--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -3,22 +3,23 @@
  * Copyright 2013–2014 thoughtbot, inc.
  * MIT License */
 
-// Variables
-@import "variables";
 
-// Neat Settings -- uncomment if using Neat -- must be imported before Neat
-// @import "grid-settings";
+  // Variables
+  // @import "variables";
 
-// Extends
-@import "extends/button";
-@import "extends/clearfix";
-@import "extends/errors";
-@import "extends/flashes";
-@import "extends/hide-text";
+  // Neat Settings -- uncomment if using Neat -- must be imported before Neat
+  // @import "grid-settings";
 
-// Typography and Elements
-@import "typography";
-@import "forms";
-@import "tables";
-@import "lists";
-@import "buttons";
+  // Extends
+  // @import "extends/button";
+  // @import "extends/clearfix";
+  // @import "extends/errors";
+  // @import "extends/flashes";
+  // @import "extends/hide-text";
+
+  // // Typography and Elements
+  // @import "typography";
+  // @import "forms";
+  // @import "tables";
+  // @import "lists";
+  // @import "buttons";
