--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -1,64 +1,66 @@
 @import "normalize";
 @import "bourbon/bourbon";
-@import "grid-settings";
+@import "base/grid-settings";
 @import "neat/neat";
 @import "base/base";
 @import "prism";
 @import "fixedsticky";
 
-@import "bourbon-nav";
 @import "refills-styles";
+@import "bourbon-nav";
 @import "refills-nav";
 
-@import "refills/accordion";
 @import "refills/accordion-tabs";
 @import "refills/accordion-tabs-minimal";
-@import "refills/badges";
-@import "refills/breadcrumbs";
 @import "refills/browser";
-@import "refills/button-group";
-@import "refills/cards";
-@import "refills/centered-navigation";
-@import "refills/comment";
-@import "refills/device";
-@import "refills/dropdown";
-@import "refills/expander";
-@import "refills/fade-in";
-@import "refills/flashes";
-@import "refills/flex-boxes";
-@import "refills/footer";
-@import "refills/footer-2";
-@import "refills/grid-items";
-@import "refills/grid-items-lines";
-@import "refills/hero";
-@import "refills/hover-tile-animation";
-@import "refills/icon-bullet-points";
-@import "refills/image-gradient-dynamic";
-@import "refills/intro-text";
-@import "refills/label-alerts";
-@import "refills/maps";
-@import "refills/modal";
-@import "refills/navigation";
-@import "refills/pagination";
-@import "refills/progress-bar";
-@import "refills/progress-bar-indication";
-@import "refills/search-bar";
-@import "refills/search-tools";
-@import "refills/side-image";
-@import "refills/sliding-menu";
-@import "refills/switch";
-@import "refills/tables";
-@import "refills/tables-minimal";
-@import "refills/texture-legend";
-@import "refills/textures";
-@import "refills/tooltip";
-@import "refills/type-system-geometric";
-@import "refills/type-system-rounded";
-@import "refills/type-system-sans";
-@import "refills/type-system-serif";
-@import "refills/type-system-slab";
-@import "refills/type-system-traditional";
-@import "refills/vertical-tabs";
-@import "refills/video";
-@import "refills/scroll-on-page";
-@import "refills/parallax";
+// @import "refills/cards";
+// @import "refills/centered-navigation";
+// @import "refills/comment";
+// @import "refills/device";
+// @import "refills/flex-boxes";
+// @import "refills/footer";
+// @import "refills/footer-2";
+// @import "refills/grid-items";
+// @import "refills/grid-items-lines";
+// @import "refills/hero";
+// @import "refills/icon-bullet-points";
+// @import "refills/intro-text";
+// @import "refills/maps";
+// @import "refills/navigation";
+// @import "refills/side-image";
+// @import "refills/tables";
+// @import "refills/tables-minimal";
+// @import "refills/vertical-tabs";
+// @import "refills/video";
+// @import "refills/scroll-on-page";
+
+// @import "refills/accordion";
+// @import "refills/badges";
+// @import "refills/breadcrumbs";
+// @import "refills/button-group";
+// @import "refills/dropdown";
+// @import "refills/expander";
+// @import "refills/fade-in";
+// @import "refills/flashes";
+// @import "refills/hover-tile-animation";
+// @import "refills/image-gradient-dynamic";
+// @import "refills/label-alerts";
+// @import "refills/modal";
+// @import "refills/pagination";
+// @import "refills/progress-bar";
+// @import "refills/progress-bar-indication";
+// @import "refills/search-bar";
+// @import "refills/search-tools";
+// @import "refills/sliding-menu";
+// @import "refills/switch";
+// @import "refills/texture-legend";
+// @import "refills/textures";
+// @import "refills/tooltip";
+// @import "refills/parallax";
+
+// @import "refills/type-system-geometric";
+// @import "refills/type-system-rounded";
+// @import "refills/type-system-sans";
+// @import "refills/type-system-serif";
+// @import "refills/type-system-slab";
+// @import "refills/type-system-traditional";
