Cards: Remove Neat and Bitters dependency

--- a/source/_cards.html.erb
+++ b/source/_cards.html.erb
@@ -46,7 +46,7 @@
       The Last Card
     </div>
     <div class="card-copy">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
     </div>
     <div class="card-stats">
       <ul>
@@ -56,4 +56,5 @@
       </ul>
     </div>
   </div>
+  
 </div>
