--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -31,7 +31,15 @@ title: Refills
       </div>
       <div class="refill-snippet"><%= code_for('browser') %></div>
     </section>
-    
+
+    <section id="cards" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Cards</h6></div>
+        <div class="refill-centering"><%= partial "cards" %></div>
+      </div>
+      <div class="refill-snippet"><%= code_for('cards') %></div>
+    </section>
+
   </div> 
 </div>
 
