--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -13,7 +13,7 @@
 @import "refills/accordion-tabs";
 @import "refills/accordion-tabs-minimal";
 @import "refills/browser";
-// @import "refills/cards";
+@import "refills/cards";
 // @import "refills/centered-navigation";
 // @import "refills/comment";
 // @import "refills/device";
