--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -40,6 +40,14 @@ title: Refills
       <div class="refill-snippet"><%= code_for('cards') %></div>
     </section>
 
+    <section id="centered-navigation" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Centered Navigation</h6></div>
+        <%= partial "centered_navigation" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('centered_navigation') %></div>
+    </section>
+
   </div> 
 </div>
 
