--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -14,7 +14,7 @@
 @import "refills/accordion-tabs-minimal";
 @import "refills/browser";
 @import "refills/cards";
-// @import "refills/centered-navigation";
+@import "refills/centered-navigation";
 // @import "refills/comment";
 // @import "refills/device";
 // @import "refills/flex-boxes";
