--- a/source/stylesheets/refills/_centered-navigation.scss
+++ b/source/stylesheets/refills/_centered-navigation.scss
@@ -1,4 +1,11 @@
 .centered-navigation {
+  // if you are using Bitters you can remove everything down to the line break
+  $base-border-radius: 3px;
+  $dark-gray: #333;
+  $large-screen: em(860);
+  $base-font-color: $dark-gray;
+  -webkit-font-smoothing: antialiased;
+
   $centered-navigation-padding: 1em;
   $centered-navigation-logo-height: 2em;
   $centered-navigation-background: #E7F1EC;
@@ -13,7 +20,6 @@
 
   background-color: $centered-navigation-background;
   border-bottom: 1px solid darken($centered-navigation-background, 6);
-  font-family: $serif;
   min-height: $centered-navigation-height;
   width: 100%;
   z-index: 9999;
@@ -46,6 +52,7 @@
     margin: 0;
     padding-right: $centered-navigation-submenu-padding;
     text-transform: uppercase;
+    text-decoration: none;
 
     @include media ($horizontal-bar-mode) {
       display: none;
@@ -103,6 +110,16 @@
     width: 100%;
     z-index: 9999;
 
+    a {
+      text-decoration: none;
+      color: $centered-navigation-color;
+      display: inline-block;
+
+      &:hover {
+        color: $centered-navigation-color-hover;
+      }
+    }
+
     @include media($horizontal-bar-mode) {
       background: transparent;
       display: inline;
@@ -110,15 +127,6 @@
 
       a {
         padding-right: $centered-navigation-item-padding;
-      }
-    }
-
-    a {
-      color: $centered-navigation-color;
-      display: inline-block;
-
-      &:hover {
-        color: $centered-navigation-color-hover;
       }
     }
   }
@@ -237,6 +245,7 @@
       }
 
       a {
+        text-decoration: none;
         background-color: darken($centered-navigation-background, 3);
         display: inline-block;
         text-align: right;
