--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,6 +48,16 @@ title: Refills
       <div class="refill-snippet"><%= code_for('centered_navigation') %></div>
     </section>
 
+    <section id="comment" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Comments</h6></div>
+        <div class="refill-centering">
+          <div class="refill-smaller"><%= partial "comment" %></div>
+        </div>
+      </div>
+      <div class="refill-snippet"><%= code_for('comment') %></div>
+    </section>
+
   </div> 
 </div>
 
