--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -15,7 +15,7 @@
 @import "refills/browser";
 @import "refills/cards";
 @import "refills/centered-navigation";
-// @import "refills/comment";
+@import "refills/comment";
 // @import "refills/device";
 // @import "refills/flex-boxes";
 // @import "refills/footer";
