--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -58,6 +58,14 @@ title: Refills
       <div class="refill-snippet"><%= code_for('comment') %></div>
     </section>
 
+    <section id="device" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Device</h6></div>
+        <%= partial "device" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('device') %></div>
+    </section>
+
   </div> 
 </div>
 
