--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -16,7 +16,7 @@
 @import "refills/cards";
 @import "refills/centered-navigation";
 @import "refills/comment";
-// @import "refills/device";
+@import "refills/device";
 // @import "refills/flex-boxes";
 // @import "refills/footer";
 // @import "refills/footer-2";
