--- a/source/stylesheets/refills/_browser.scss
+++ b/source/stylesheets/refills/_browser.scss
@@ -1,8 +1,9 @@
 .browsers {
-  // if you are using Bitters you can remove everything down to the line break
+  // if you are using Bitters you can remove everything down to the commented line
   $base-border-radius: 3px;
   $base-background-color: white;
   $large-screen: em(860);
+  //////////////////////////////////////////////
 
   $browser-top-bar-height: 1.5em;
   $browser-circle-size: .5em; 
