--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -17,7 +17,7 @@
 @import "refills/centered-navigation";
 @import "refills/comment";
 @import "refills/device";
-// @import "refills/flex-boxes";
+@import "refills/flex-boxes";
 // @import "refills/footer";
 // @import "refills/footer-2";
 // @import "refills/grid-items";
