--- a/source/stylesheets/refills/_accordion-tabs-minimal.scss
+++ b/source/stylesheets/refills/_accordion-tabs-minimal.scss
@@ -1,5 +1,5 @@
 .accordion-tabs-minimal {
-  // if you are using Bitters you can remove everything down to the line break
+  // if you are using Bitters you can remove everything down to the commented line
   $base-border-color: gainsboro;
   $base-background-color: white;
   $base-spacing: 1.5em;
@@ -8,6 +8,7 @@
   $dark-gray: #333;
   $medium-screen: em(640);
   -webkit-font-smoothing: antialiased;
+  //////////////////////////////////////////////
 
   $tab-link-color: $dark-gray;
   $tab-border: 1px solid $base-border-color;
