--- a/source/stylesheets/refills/_accordion-tabs.scss
+++ b/source/stylesheets/refills/_accordion-tabs.scss
@@ -1,5 +1,5 @@
 .accordion-tabs {
-  // if you are using Bitters you can remove everything down to the line break
+  // if you are using Bitters you can remove everything down to the commented line
   $base-border-color: gainsboro;
   $base-border-radius: 3px;
   $base-background-color: white;
@@ -10,6 +10,7 @@
   $light-gray: #DDD;
   $medium-screen: em(640);
   -webkit-font-smoothing: antialiased;
+  //////////////////////////////////////////////
 
   $tab-border: 1px solid $base-border-color;
   $tab-content-background: lighten($light-gray, 10);
