--- a/source/stylesheets/refills/_device.scss
+++ b/source/stylesheets/refills/_device.scss
@@ -1,17 +1,8 @@
 .device-background {
-  // if you are using Bitters you can 
-  // remove everything down to the commented line
-  $base-border-color: gainsboro;
+  // if you are using Bitters you can remove everything down to the commented line
   $base-border-radius: 3px;
-  $base-background-color: white;
-  $base-spacing: 1.5em;
   $base-accent-color: #477DCA;
-  $base-link-color: $base-accent-color;
-  $dark-gray: #333;
-  $light-gray: #DDD;
-  $medium-screen: em(640);
   $large-screen: em(860);
-  $base-font-color: $dark-gray;
   -webkit-font-smoothing: antialiased;
 
   button {
@@ -72,7 +63,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 20em;
+  min-height: 20em;
 
   .device-text {
     color: $device-text-color;
