--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -74,6 +74,18 @@ title: Refills
       <div class="refill-snippet"><%= code_for('flex_boxes') %></div>
     </section>
 
+    <section id="footer" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Footers</h6></div>
+        <div class="refill-centering"><%= partial "footer" %></div>
+      </div>
+      <div class="refill-snippet"><%= code_for('footer') %></div>
+      <div class="refills-wrapper">
+        <div class="refill-centering"><%= partial "footer_2" %></div>
+      </div>
+      <div class="refill-snippet"><%= code_for('footer_2') %></div>
+    </section>
+
   </div> 
 </div>
 
