--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -18,7 +18,7 @@
 @import "refills/comment";
 @import "refills/device";
 @import "refills/flex-boxes";
-// @import "refills/footer";
+@import "refills/footer";
 // @import "refills/footer-2";
 // @import "refills/grid-items";
 // @import "refills/grid-items-lines";
