--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -19,7 +19,7 @@
 @import "refills/device";
 @import "refills/flex-boxes";
 @import "refills/footer";
-// @import "refills/footer-2";
+@import "refills/footer-2";
 // @import "refills/grid-items";
 // @import "refills/grid-items-lines";
 // @import "refills/hero";
