--- a/source/stylesheets/refills/_footer-2.scss
+++ b/source/stylesheets/refills/_footer-2.scss
@@ -25,6 +25,28 @@
 // }
 
 .footer-2 {
+  // if you are using Bitters you can remove everything down to the commented line
+  $base-spacing: 1.5em;
+  $base-accent-color: #477DCA;
+  $medium-screen: em(640);
+  $large-screen: em(860);
+  -webkit-font-smoothing: antialiased;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    line-height: 1.5em;
+  }
+
+  li {
+    list-style: none;
+  }
+
+  a {
+    text-decoration: none;
+  }
+  //////////////////////////////////////////////
+
   $footer-background: desaturate(darken($base-accent-color, 20), 30);
   $footer-color: white;
   $footer-link-color: transparentize($footer-color, .6);
