Grid Items: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -20,8 +20,8 @@
 @import "refills/flex-boxes";
 @import "refills/footer";
 @import "refills/footer-2";
-// @import "refills/grid-items";
-// @import "refills/grid-items-lines";
+@import "refills/grid-items";
+@import "refills/grid-items-lines";
 // @import "refills/hero";
 // @import "refills/icon-bullet-points";
 // @import "refills/intro-text";
