--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -86,6 +86,18 @@ title: Refills
       <div class="refill-snippet"><%= code_for('footer_2') %></div>
     </section>
 
+    <section id="grid-items" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Grid Items</h6></div>
+        <div class="refill-centering"><%= partial "grid_items" %></div>
+      </div>
+      <div class="refill-snippet"><%= code_for('grid_items') %></div>
+      <div class="refills-wrapper">
+        <div class="refill-centering"><%= partial "grid_items_lines" %></div>
+      </div>
+      <div class="refill-snippet"><%= code_for('grid_items_lines') %></div>
+    </section>
+
   </div> 
 </div>
 
