--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -98,6 +98,14 @@ title: Refills
       <div class="refill-snippet"><%= code_for('grid_items_lines') %></div>
     </section>
 
+    <section id="hero" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Hero Unit</h6></div>
+        <%= partial "hero" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('hero') %></div>
+    </section>
+
   </div> 
 </div>
 
