--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -22,7 +22,7 @@
 @import "refills/footer-2";
 @import "refills/grid-items";
 @import "refills/grid-items-lines";
-// @import "refills/hero";
+@import "refills/hero";
 // @import "refills/icon-bullet-points";
 // @import "refills/intro-text";
 // @import "refills/maps";
