Bullet points: Decoupled

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -106,6 +106,14 @@ title: Refills
       <div class="refill-snippet"><%= code_for('hero') %></div>
     </section>
 
+    <section id="icon-bullet-points" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Icon Bullet Points</h6></div>
+        <%= partial "icon_bullet_points" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('icon_bullet_points') %></div>
+    </section>
+
   </div> 
 </div>
 
