--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -23,7 +23,7 @@
 @import "refills/grid-items";
 @import "refills/grid-items-lines";
 @import "refills/hero";
-// @import "refills/icon-bullet-points";
+@import "refills/icon-bullet-points";
 // @import "refills/intro-text";
 // @import "refills/maps";
 // @import "refills/navigation";
